--- a/src/assets/elements/_buttons.scss
+++ b/src/assets/elements/_buttons.scss
@@ -57,3 +57,6 @@ $link-hover-color: darken($link-color, 15%);
 .btn-light {
   border-color: darken(#f5f5f5, 10%);
 }
+.btn-success {
+  //color: #fff!important;
+}
